--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
     "@mui/material-nextjs": "^5.15.3",
     "@types/node": "20.8.10",
     "@types/react": "18.2.46",
@@ -21,10 +22,15 @@
     "eslint-config-next": "14.0.3",
     "firebase": "^10.4.0",
     "next": "13.4.7",
+    "openai": "^4.24.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.7"
   }
 }
