--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "openai": "^4.24.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/uuid": "^9.0.7"
   }
 }
