--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.3",
     "firebase": "^10.4.0",
+    "firebase-functions": "^4.6.0",
     "next": "13.4.7",
     "openai": "^4.24.1",
     "postcss": "8.4.31",
