--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.5",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.3",
+    "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
     "firebase-functions": "^4.6.0",
     "next": "13.4.7",
@@ -37,6 +38,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/uuid": "^9.0.7"
   }
