--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.15.3",
     "@mui/material-nextjs": "^5.15.3",
     "@types/node": "20.8.10",
