fixed some issues

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.15.12",
+    "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
     "@mui/material-nextjs": "^5.15.3",
+    "@mui/styles": "^5.15.12",
     "@types/node": "20.8.10",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
