about us page ins now done

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.15.12",
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
@@ -30,6 +29,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
     "firebase-functions": "^4.6.0",
+    "markdown-to-jsx": "^7.4.3",
     "next": "13.4.7",
     "openai": "^4.24.1",
     "postcss": "8.4.31",
