--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-linkedin-login-oauth2": "^2.0.1",
+    "simple-git": "^3.23.0",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "uuid": "^9.0.1"
