--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,8 @@
 {
   "hosting": {
+    "predeploy": "npm run predeploy",
     "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "frameworksBackend": {
       "region": "us-central1"
     }
